# product-pulse

./: .gitignore  .replit  README.md  access_app.html  app.py  productpulse.db  pyproject.toml  start_app.py  start_productpulse.bat  test_db_connection.py  test_gemini.py
.streamlit/: config.toml
utils/: analysis.py  chatbot.py  data_processor.py  database.py  visualization.py
